tests/ui/contracts/contracts-disabled-side-effect-declarations.stderr
error[E0277]: the trait bound `&mut &mut u32: Copy` is not satisfied in `{closure@$DIR/contracts-disabled-side-effect-declarations.rs:7:12: 7:24}`
  --> $DIR/contracts-disabled-side-effect-declarations.rs:7:12
   |
LL | #[requires(*x = 0; true)]
   |            ^^^^^^^^^^^^
   |            |
   |            unsatisfied trait bound
   |            within this `{closure@$DIR/contracts-disabled-side-effect-declarations.rs:7:12: 7:24}`
   |
   = help: within `{closure@$DIR/contracts-disabled-side-effect-declarations.rs:7:12: 7:24}`, the trait `Copy` is not implemented for `&mut &mut u32`
help: the trait `Copy` is implemented for `u32`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
  ::: $SRC_DIR/core/src/marker.rs:LL:COL
   |
   = note: in this macro invocation
   = note: `Copy` is implemented for `&&mut u32`, but not for `&mut &mut u32`
note: required because it's used within this closure
  --> $DIR/contracts-disabled-side-effect-declarations.rs:7:12
   |
LL | #[requires(*x = 0; true)]
   |            ^^^^^^^^^^^^
note: required by a bound in `contract_check_requires`
  --> $SRC_DIR/core/src/intrinsics/mod.rs:LL:COL
   = note: this error originates in the macro `marker_impls` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
